# brace-green

./: Dockerfile  Dockerfile.white  README.md  docker-entrypoint.sh  green_agent.toml  pyproject.toml
.github/workflows/: docker-publish-white.yml  test-and-publish.yml
src/: .dockerignore  Dockerfile  README.md  __init__.py  agent.py  docker-entrypoint.sh  executor.py  green_agent.py  messenger.py  server.py  white_agent.py
src/evaluator/: README.md  __init__.py  a2a_client.py  agent_interface.py  green_agent.toml  main.py  state.py  step_evaluator.py  utils.py  white_agent.toml  workflow.py
src/evaluator/prompts/: default.py
src/prerequisite_refinement/: README.md  __init__.py  analyzer.py  workflow.py
src/tests/: README.md  __init__.py  conftest.py  test_agent.py
tests/: test_agent.py
white_agent/: agent.py  docker-entrypoint.sh  executor.py  mock_agent.py  server.py  test_mock_agent.py  test_regex_patterns.py
white_agent/mock_data/: LSX-UniWue-20260115-172655.json  LSX-UniWue-20260115-172731.json  LSX-UniWue-20260115-173651.json  README.md
