[project]
name = "bracegreen"
version = "0.1.0"
description = "Green agent for evaluating LLM agents"
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "litellm",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "arize-phoenix>=3.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "openinference-instrumentation-litellm>=0.1.0",
    "httpx>=0.27.0",
    "sse-starlette>=2.0.0",
    "uvicorn>=0.30.0",
    "starlette>=0.37.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
dev = [
    "nest-asyncio>=1.5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

